<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtScreen"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:hint=""
        android:textColor="@color/white"
        android:maxLength="16"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:typeface="serif"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtScreen"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:hint=""
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/txtOutput">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btnClear"
                android:textColor="#F81707"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button3"
                android:textSize="30sp"
                android:text="@string/btnClear"/>

<!--            <Button-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_margin="5dp"-->
<!--                android:id="@+id/btnPersen"-->
<!--                android:textColor="#F81707"-->
<!--                android:typeface="serif"-->
<!--                android:textStyle="bold"-->
<!--                android:background="@drawable/button3"-->
<!--                android:textSize="30sp"-->
<!--                android:text="@string/btnPersen"/>-->

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btnKurung"
                android:textColor="#EDD609"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button2"
                android:textSize="30sp"
                android:text="@string/btnKurung"/>


            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btnBagi"
                android:textColor="#ECD50B"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button2"
                android:textSize="30sp"
                android:text="@string/btnBagi"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn7"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn7"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn8"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn8"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn9"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn9"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btnKali"
                android:textColor="#EDD609"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button2"
                android:textSize="30sp"
                android:text="@string/btnKali"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn4"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn4"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn5"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn6"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn6"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btnKurang"
                android:textColor="#EDD609"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button2"
                android:textSize="30sp"
                android:text="@string/btnKurang"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn1"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn2"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn2"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btn3"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn3"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btnTambah"
                android:textColor="#EDD609"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button2"
                android:textSize="30sp"
                android:text="@string/btnTambah"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1">

            <Button
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:id="@+id/btnKoma"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btnKoma"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:id="@+id/btn0"
                android:textColor="#08C608"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button1"
                android:textSize="30sp"
                android:text="@string/btn0"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/btnResult"
                android:textColor="#EDD609"
                android:typeface="serif"
                android:textStyle="bold"
                android:background="@drawable/button2"
                android:textSize="30sp"
                android:text="@string/btnHasil"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>